--- a/style.css
+++ b/style.css
@@ -179,3 +179,11 @@
 		background-color:hsla(226, 100%, 50%, 0.61);
 		color: yellow;
 	}	
+	
+	hr {
+		border: 0;
+		height: 1px;
+		background: #333;
+		background-image: linear-gradient(to right, #ccc, #333, #ccc);
+	}
+
